fixed some spacing issues and added meta data

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -20,6 +20,14 @@ body {
     margin-bottom: 50px;
 }
 
+.subPara {
+  color: rgb(139, 139, 139);
+  text-align: center;
+  font-size: 1.5rem;
+  margin-top: -25px;
+  margin-bottom: 50px;
+}
+
 /* NAVBAR */
 
 #brandName{
@@ -87,15 +95,17 @@ body {
 
   #services .container{
     width: 100%;
+    height: 100%;
     background: white;
     /* margin-top: 10%; */
   }
 
+  #services .row{
+    width: 100%;
+  }
+
   #services .box{
     width: 100%;
-    /* padding: 0 125px 0 125px; */
-    /* height: 100vh; */
-    /* background: rgb(177, 177, 177); */
   }
 
   #services i{
@@ -123,12 +133,6 @@ body {
   #skills .row{
     width: 100%;
   }
-
-  /* #skills h1{
-    color: #0099ff;
-    text-align: center;
-    margin-bottom: 50px;
-  } */
 
   #skills .card{
     border: none;
@@ -167,4 +171,15 @@ body {
     }
 
 
+  }
+
+  @media (min-width: 1200px){
+    .container {
+    max-width: 1140px;
+  }
+  }
+  @media (min-width: 1400px){
+    .container {
+    max-width: 1400px;
+  }
   }
